[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokcodecut"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
]

[project.scripts]
tokcodecut = "tokcodecut.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tokcodecut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
