[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokcodecut"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "pyyaml>=6.0",
]

[project.scripts]
tokcodecut = "tokcodecut.cli:main"

[project.optional-dependencies]
lsp = ["python-lsp-server>=1.11"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["tokcodecut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
